css/style.css
/* Global styles ============= */
html,
body {
  width: 100%;
  height: 100%;
}

body {
  font-family: 'Muli', 'Helvetica', 'Arial', 'sans-serif';
}

a {
  color: rgba(34, 34, 34, 1);
  transition: all .35s;
}

a:hover,
a:focus {
  color: #fcbd20 !important;
}

hr {
  max-width: 100px;
  margin: 25px auto 0;
  border-width: 1px;
  border-color: rgba(34, 34, 34, 0.1);
}

hr.light {
  border-color: white;
}

h1,
h2,
h3,
h4,
h5,
h6 {
  font-family: 'Catamaran', 'Helvetica', 'Arial', 'sans-serif';
  font-weight: 200;
  letter-spacing: 1px;
}

p {
  font-size: 18px;
  line-height: 1.5;
  margin-bottom: 20px;
  text-align: justify;
}

section {
  padding: 50px 0;
}

section h2 {
  font-size: 50px;
}

.nav-link {
  color: #fff !important;
}

.avatar img {
  width: 100%;
  max-width: 400px;
  border-radius: 1000px;
}

header.masthead {
  position: relative;
  padding-top: 50px;
}

.skills {
  padding-top: 6px;
  padding-bottom: 20px;
}

.icon-item {
  display: flex;
  justify-content: center;
  align-items: center;
  padding-bottom: 20px;
  width: 60px;
}

.icon-item img {
  width: 100%;
  max-width: 80px;
}

.card {
  margin-top: 20px;
}

/*.card.shadow-sm {*/
.shadow-sm {
  box-shadow: 0 0.25rem 0.35rem rgba(0, 0, 0, 0.075) !important;
}

.card-body {
  padding-bottom: 5px;
}

.contact-section {
  padding-top: 0;
}

.social {
  border: solid 3px #212529;
  border-radius: 10px;
}

.iconsCustom {
  display: flex;
  align-items: center;
  justify-content: center;
}

.iconsCustom i {
  padding: 30px;
}

a:hover .fa-github:before,
a:hover .fa-linkedin:before,
a:hover .fa-envelope:before,
a:hover .fa-at:before {
  /*  box-shadow: 0 0.25rem 0.35rem rgba(0, 0, 0, 0.275) !important;
  border-radius: 0.25rem !important;*/
  text-shadow: 0 0 10px black;
}

.footer {
  height: 50px;
}

.footer,
.footer a {
  color: #fff;
  text-decoration: none;
}


/* No less than 400px, no greater than 900px */
@media (min-width: 769px) and (max-width: 992px) {

/* used to check we are on the right screen width
  .social {
    border: solid 30px #212529;
  }*/

  .aboutMe {
    margin-top: 40px;
  }

}

